	  nano.texi. (DLR, suggested by James Collings)
	- Rework the file-writing routines so that they can work
	  properly with already-opened files, such as the
	  mkstemp()-created files used by the spell-checking code.
	  Changes to safe_tempnam() (renamed safe_tempfile()),
	  write_file(), write_marked(), die(), do_spell(), and
	  do_exit(). (DLR)
- cut.c:
  cut_line()
	- Set placewewant properly after cutting a line, to avoid a
	  problem where the screen won't be updated if (a) we're not on
	  the first page when we cut the line, and (b) immediately after
	  we cut the line, we hit End to move to the end of the line
	  after it. (DLR)
- files.c:
  read_line()
	- Rename variable prev to prevnode to avoid confusion. (DLR)
  load_open_file()
	- Remove an unneeded clearok(FALSE). (DLR)
  get_next_filename()
	- Use an unsigned long instead of an int for the number
	  prepended to the filename. (DLR)
  write_file()
	- Since lineswritten is a size_t, print its value as an unsigned
	  long instead of an unsigned int. (DLR)
	- Declare the size_t i only in the loop where it's used. (DLR)
  cwd_tab_completion(), browser_init()
	- Rename variable next to nextdir to avoid confusion. (DLR)
  input_tab()
	- Since list is a bool, assign it FALSE instead of 0. (DLR)
	- Add multibyte/wide character support, so that we don't end up
	  with a string that contains only part of a multibyte
	  character during tab completion. (DLR)
  do_browser()
	- Don't treat NANO_CANCEL_KEY as NANO_EXIT_KEY anymore, for
	  consistency. (DLR)
	- When displaying "(dir)" in the available screen space, make
	  sure that the string it's stored in is always null-terminated.
	  (DLR)
  save_history()
	- Properly save history when in view mode. (DLR)
- global.c:
  shortcut_init()
	- Move the "Refresh" and "Exit" shortcuts to the beginning of
	  the help browser shortcut list, for consistency. (DLR)
  thanks_for_all_the_fish()
	- Remove free_toggles() and move its code here verbatim, as it's